--- a/English/grammar.html
+++ b/English/grammar.html
@@ -88,7 +88,7 @@
   <article>
 <h2 id="Present-Simple">Present Simple</h2>
 <p>Present Simple використовують для виразу звичайної, регулярно повторюваної дії.</p>
-<img src="PrSi.png" alt="Зображення">
+<img src="PrSi1.png" alt="Зображення">
 </article>
 <a href="#to-the-content">До змісту</a>
     
@@ -116,7 +116,7 @@
   <article>
 <h2 id="Past-Simple">Past Simple</h2>
 <p>Past Simple використовують для виразу дії, яка відбулася у минулому.</p>
-    <img src="PaSi.png" alt="Зображення">
+    <img src="PaSi1.png" alt="Зображення">
   </article>
 <a href="#to-the-content">До змісту</a>
 
