--- a/English/reading.html
+++ b/English/reading.html
@@ -33,60 +33,16 @@ ol > li:hover:nth-child(5){
   </style>
 </head>
   <body>
-    <h1 id="main">Сьогодення Сєроух Варвари Олексіївни</h1>
+    <h1 id="main">Reading</h1>
     
     <p><a id="back" href="index.html">Назад на головну</a></p>
 
-<h2 id="center">Мій типовий список покупок:</h2>
+<h2 id="center">My Wonderful Family</h2>
 
-<ul>
-  <li>
-      Кава
-  </li>
-  <li>
-      Крупи:
-  </li>
-  <ul>
-  <li>
-      Вівсянка
-  </li>
-  <li>
-      Гречка
-  </li>
-  <li>
-      Рис
-  </li>
-  </ul>
-  <li>
-      Соуси:
-  </li>
-  <ul>
-  <li>
-      Кетчуп
-  </li>
-  <li>
-      Майонез
-  </li>
-  <li>
-      Гірчиця
-  </li>
-  </ul>
-  <li>
-      Молочні продукти:
-  </li>
-  <ul>
-  <li>
-      Сир
-  </li>
-  <li>
-      Молоко
-  </li>
-  <li>
-      Морозиво
-  </li>
-  </ul>
-</ul>
+<a>I live in a house near the mountains. I have two brothers and one sister, and I was born last. My father teaches mathematics, and my mother is a nurse at a big hospital. My brothers are very smart and work hard in school. My sister is a nervous girl, but she is very kind. My grandmother also lives with us. She came from Italy when I was two years old. She has grown old, but she is still very strong. She cooks the best food!
 
+My family is very important to me. We do lots of things together. My brothers and I like to go on long walks in the mountains. My sister likes to cook with my grandmother. On the weekends we all play board games together. We laugh and always have a good time. I love my family very much.</a>
+    
 <h2 id="center">Мій улюблений десерт:</h2>
 
 <h2>Нью-Йоркський чизкейк</h2>
