--- a/English/reading.html
+++ b/English/reading.html
@@ -68,6 +68,45 @@ She looks at the meat that is on sale and chooses a 5-pound roll of hamburger. S
 
 Martha then realizes that she has forgotten something. She runs back and gets 1 container of salt and then rushes to the checkout. She puts her groceries into her car and leaves.</a>
 
-    
+    <h2 id="center">Letter to a Friend</h2>
+
+    <a>Hi, Fred!
+
+It's been a while since we have been in touch. How has your semester been?
+
+I wanted to send an email update to you let you know how things have been going during my semester abroad here in Málaga, Spain. I've already been here for six weeks, and I feel like I am finally adapting to the culture. I'm also speaking the language more fluently.
+
+I arrived during the first week of September. The weather has been very nice. Even though it's October, it's still rather sunny and warm. In fact, I went to the beach and swam in the Mediterranean Sea earlier today.
+
+I am living with a very welcoming host family. I have my own private bedroom, but we eat breakfast, lunch, and dinner together. On Sundays, we eat a big home-cooked paella for lunch. In Spain, lunch is usually the biggest meal of the day. It's also very common for the people to take a midday nap right after a big meal. I am actually just waking up from my nap right now!
+
+On weekdays, I take classes at the local university. There, I met several native Spanish speakers. They have been very kind and patient with me. At first, I struggled to comprehend their Spanish, but now I understand most of our conversations. They have commented that my Spanish has improved a lot since we first met. Now, I am more confident to use the language in other places like stores and restaurants.
+
+I am so glad that I decided to spend the semester here in Spain. We have an extended weekend coming up, so a group of my friends and I are going to travel to France for four days. It's so easy and inexpensive to travel internationally in Europe. I love it!
+
+I look forward to hearing from you soon. Like I said, don't hesitate to stay in touch more often. Perhaps you could even come to visit! What do you think?
+
+Best wishes,
+Patrick</a>
+
+    <h2 id="center">The city where I live</h2>
+
+    <a>My name is Clark, and I will tell you about my city.
+
+I live in an apartment. In my city, there is a post office where people mail letters. On Monday, I go to work. I work at the post office. Everyone shops for food at the grocery store. They also eat at the restaurant. The restaurant serves pizza and ice cream.
+
+My friends and I go to the park. We like to play soccer at the park. On Fridays, we go to the cinema to see a movie. Children don't go to school on the weekend. Each day, people go to the hospital when they are sick. The doctors and nurses take care of them. The police keep everyone safe. I am happy to live in my city.</a>
+
+    <h1>B1</h1>
+
+    <h2 id="center">Christmas</h2>
+
+    <a>A Christian holiday signifying the birth of Jesus, Christmas is widely celebrated and enjoyed across the United States and the world. The holiday always falls on 25 December (regardless of the day of the week), and is typically accompanied by decorations, presents, and special meals.
+
+Specifically, the legend behind Christmas (and the one that most children are told) is that Santa Claus, a bearded, hefty, jolly, and red-jacket-wearing old man who lives in the North Pole, spends the year crafting presents with his elves, or small, festive, excited Santa-assistants. All the children who behave throughout the year are admitted to the Good List, and will presumably receive their desired gifts on Christmas, while those who don't behave are placed on the Naughty List, and will presumably (although the matter is determined by parents) receive a lump of coal.
+
+Santa Claus is said to fly around the Christmas sky in a sled powered by his magical reindeer, or cold-resistant, mythically powered, individually named animals, delivering presents to each child's house in the process. Santa is also expected to slide through chimneys to deliver these presents (homes not equipped with chimneys might "leave the front door cracked open"), and children sometimes arrange cookies or other treats on a plate for him to enjoy.
+
+Gifts are placed underneath a Christmas tree, or a pine tree that's decorated with ornaments and/or lights and is symbolic of the holiday. Additionally, smaller gifts may be placed inside a stocking, or a sock-shaped, holiday-specific piece of fabric that's generally hung on the mantle of a fireplace (homes without fireplaces might use the wall). A Christmas tree's ornaments, or hanging, typically spherical decorations, in addition to the mentioned lights, may be accompanied by a star, or a representation of the Star of Jerusalem that the Three Apostles followed while bringing Baby Jesus gifts and honoring him, in the Bible.</a>
   </body>
 </html>
