--- a/English/reading.html
+++ b/English/reading.html
@@ -32,14 +32,6 @@ My family is very important to me. We do lots of things together. My brothers an
 </article>
 <a href="#to-the-content">До змісту</a>
     
-    <h1>A1</h1>
-
-<h2 id="center">My Wonderful Family</h2>
-
-<a>I live in a house near the mountains. I have two brothers and one sister, and I was born last. My father teaches mathematics, and my mother is a nurse at a big hospital. My brothers are very smart and work hard in school. My sister is a nervous girl, but she is very kind. My grandmother also lives with us. She came from Italy when I was two years old. She has grown old, but she is still very strong. She cooks the best food!
-
-My family is very important to me. We do lots of things together. My brothers and I like to go on long walks in the mountains. My sister likes to cook with my grandmother. On the weekends we all play board games together. We laugh and always have a good time. I love my family very much.</a>
-
 <h2 id="center">Our Vacation</h2>
 
     <a>Every year we go to Florida. We like to go to the beach.
@@ -48,6 +40,8 @@ My favorite beach is called Emerson Beach. It is very long, with soft sand and p
 
 Every morning we look for shells in the sand. I found fifteen big shells last year. I put them in a special place in my room. This year I want to learn to surf. It is hard to surf, but so much fun! My sister is a good surfer. She says that she can teach me. I hope I can do it!</a>
 
+    <a href="#to-the-content">До змісту</a>
+    
     <h2 id="center">Preparing food</h2>
 
     <a>Jack was hungry. He walked to the kitchen. He got out some eggs. He took out some oil. He placed a skillet on the stove. Next, he turned on the heat. He poured the oil into the skillet. He cracked the eggs into a bowl. He stirred the eggs. Then, he poured them into the hot skillet. He waited while the eggs cooked. They cooked for two minutes. He heard them cooking. They popped in the oil.
@@ -55,6 +49,8 @@ Every morning we look for shells in the sand. I found fifteen big shells last ye
 Next, Jack put the eggs on a plate. He placed the plate on the dining room table. Jack loved looking at his eggs. They looked pretty on the white plate. He sat down in the large wooden chair. He thought about the day ahead. He ate the eggs with a spoon. They were good.
 
 He washed the plate with dishwashing soap. Then, he washed the pan. He got a sponge damp. Finally, he wiped down the table. Next, Jack watched TV.</a>
+
+    <a href="#to-the-content">До змісту</a>
 
 <h1>A2</h1>
 
