--- a/English/reading.html
+++ b/English/reading.html
@@ -40,7 +40,7 @@ My favorite beach is called Emerson Beach. It is very long, with soft sand and p
 
 Every morning we look for shells in the sand. I found fifteen big shells last year. I put them in a special place in my room. This year I want to learn to surf. It is hard to surf, but so much fun! My sister is a good surfer. She says that she can teach me. I hope I can do it!</a>
 
-    <a href="#to-the-content">До змісту</a>
+    <p><a href="#to-the-content">До змісту</a></p>
     
     <h2 id="center">Preparing food</h2>
 
@@ -50,7 +50,7 @@ Next, Jack put the eggs on a plate. He placed the plate on the dining room table
 
 He washed the plate with dishwashing soap. Then, he washed the pan. He got a sponge damp. Finally, he wiped down the table. Next, Jack watched TV.</a>
 
-    <a href="#to-the-content">До змісту</a>
+    <p><a href="#to-the-content">До змісту</a></p>
 
 <h1>A2</h1>
 
