--- a/English/reading.html
+++ b/English/reading.html
@@ -52,9 +52,9 @@ He washed the plate with dishwashing soap. Then, he washed the pan. He got a spo
 
     <p><a href="#to-the-content">До змісту</a></p>
 
-<h1>A2</h1>
-
-    <h2 id="center">Going to the Supermarket</h2>
+     <article>
+<h1 id="A2">A2</h1>
+ <h2 id="center">Going to the Supermarket</h2>
 
     <a>Martha is at the grocery store, getting ready for a house party. She has a list of what she needs with her as she goes along. The first section she comes has produce. Martha sees apples, bananas, cherries, grapes, and strawberries. She checks her list:
 
@@ -87,6 +87,10 @@ She looks at the meat that is on sale and chooses a 5-pound roll of hamburger. S
 
 Martha then realizes that she has forgotten something. She runs back and gets 1 container of salt and then rushes to the checkout. She puts her groceries into her car and leaves.</a>
 
+</article>
+<a href="#to-the-content">До змісту</a>
+    
+
     <h2 id="center">Letter to a Friend</h2>
 
     <a>Hi, Fred!
@@ -107,6 +111,7 @@ I look forward to hearing from you soon. Like I said, don't hesitate to stay in 
 
 Best wishes,
 Patrick</a>
+<p><a href="#to-the-content">До змісту</a></p>
 
     <h2 id="center">The city where I live</h2>
 
@@ -115,7 +120,21 @@ Patrick</a>
 I live in an apartment. In my city, there is a post office where people mail letters. On Monday, I go to work. I work at the post office. Everyone shops for food at the grocery store. They also eat at the restaurant. The restaurant serves pizza and ice cream.
 
 My friends and I go to the park. We like to play soccer at the park. On Fridays, we go to the cinema to see a movie. Children don't go to school on the weekend. Each day, people go to the hospital when they are sick. The doctors and nurses take care of them. The police keep everyone safe. I am happy to live in my city.</a>
+<p><a href="#to-the-content">До змісту</a></p>
 
+     <article>
+<h1 id="B1">B1</h1>
+<h2 id="center">Christmas</h2>
+
+    <a>A Christian holiday signifying the birth of Jesus, Christmas is widely celebrated and enjoyed across the United States and the world. The holiday always falls on 25 December (regardless of the day of the week), and is typically accompanied by decorations, presents, and special meals.
+
+Specifically, the legend behind Christmas (and the one that most children are told) is that Santa Claus, a bearded, hefty, jolly, and red-jacket-wearing old man who lives in the North Pole, spends the year crafting presents with his elves, or small, festive, excited Santa-assistants. All the children who behave throughout the year are admitted to the Good List, and will presumably receive their desired gifts on Christmas, while those who don't behave are placed on the Naughty List, and will presumably (although the matter is determined by parents) receive a lump of coal.
+
+Santa Claus is said to fly around the Christmas sky in a sled powered by his magical reindeer, or cold-resistant, mythically powered, individually named animals, delivering presents to each child's house in the process. Santa is also expected to slide through chimneys to deliver these presents (homes not equipped with chimneys might "leave the front door cracked open"), and children sometimes arrange cookies or other treats on a plate for him to enjoy.
+
+Gifts are placed underneath a Christmas tree, or a pine tree that's decorated with ornaments and/or lights and is symbolic of the holiday. Additionally, smaller gifts may be placed inside a stocking, or a sock-shaped, holiday-specific piece of fabric that's generally hung on the mantle of a fireplace (homes without fireplaces might use the wall). A Christmas tree's ornaments, or hanging, typically spherical decorations, in addition to the mentioned lights, may be accompanied by a star, or a representation of the Star of Jerusalem that the Three Apostles followed while bringing Baby Jesus gifts and honoring him, in the Bible.</a>
+</article>
+<a href="#to-the-content">До змісту</a>
     <h1>B1</h1>
 
     <h2 id="center">Christmas</h2>
