--- a/English/reading.html
+++ b/English/reading.html
@@ -30,7 +30,7 @@
 <a>I live in a house near the mountains. I have two brothers and one sister, and I was born last. My father teaches mathematics, and my mother is a nurse at a big hospital. My brothers are very smart and work hard in school. My sister is a nervous girl, but she is very kind. My grandmother also lives with us. She came from Italy when I was two years old. She has grown old, but she is still very strong. She cooks the best food!
 My family is very important to me. We do lots of things together. My brothers and I like to go on long walks in the mountains. My sister likes to cook with my grandmother. On the weekends we all play board games together. We laugh and always have a good time. I love my family very much.</a>
 </article>
-<a href="#to-the-content">До змісту</a>
+<p><a href="#to-the-content">До змісту</a></p>
     
 <h2 id="center">Our Vacation</h2>
 
@@ -88,7 +88,7 @@ She looks at the meat that is on sale and chooses a 5-pound roll of hamburger. S
 Martha then realizes that she has forgotten something. She runs back and gets 1 container of salt and then rushes to the checkout. She puts her groceries into her car and leaves.</a>
 
 </article>
-<a href="#to-the-content">До змісту</a>
+<p><a href="#to-the-content">До змісту</a></p>
     
 
     <h2 id="center">Letter to a Friend</h2>
@@ -134,6 +134,9 @@ Santa Claus is said to fly around the Christmas sky in a sled powered by his mag
 
 Gifts are placed underneath a Christmas tree, or a pine tree that's decorated with ornaments and/or lights and is symbolic of the holiday. Additionally, smaller gifts may be placed inside a stocking, or a sock-shaped, holiday-specific piece of fabric that's generally hung on the mantle of a fireplace (homes without fireplaces might use the wall). A Christmas tree's ornaments, or hanging, typically spherical decorations, in addition to the mentioned lights, may be accompanied by a star, or a representation of the Star of Jerusalem that the Three Apostles followed while bringing Baby Jesus gifts and honoring him, in the Bible.</a>
 </article>
-<a href="#to-the-content">До змісту</a>
+<p><a href="#to-the-content">До змісту</a></p>
+
+    <hr>
+  <p><a id="up" href="#bio">Уверх</a></p>
       </body>
 </html>
