--- a/English/test.html
+++ b/English/test.html
@@ -7,7 +7,24 @@
    <link rel="stylesheet" href="gallery.css">
 <title> Gallery </title>
 </head>
+<body>
+  <h1>Тест</h1>
 
+  <div class="question">
+    <p>Яке це місто?</p>
+    <input type="radio" name="question1" value="Київ">Київ
+    <input type="radio" name="question1" value="Москва">Москва
+  </div>
+
+  <div class="question">
+    <p>Яка це країна?</p>
+    <input type="radio" name="question2" value="Україна">Україна
+    <input type="radio" name="question2" value="Росія">Росія
+  </div>
+
+  <input type="submit" value="Відправити">
+</body>
+</html>
 <body>
 <h1 id="main">Галерея Сєроух Варвари Олексіївни</h1>
 <p><a id="back" href="index.html">Назад на головну</a></p>
