--- a/English/index.html
+++ b/English/index.html
@@ -26,6 +26,10 @@
         <li>
             <a href="test.html">Test</a>
         </li>
+
+       <li>
+         <a href="answer.html">Answer</a>
+       </li>
     </ul>
 
   <p>Grammar - допоможе вивчити теми з граматики (Past, Present, Future).</p>
