--- a/English/test.html
+++ b/English/test.html
@@ -10,33 +10,80 @@
 <body>
   <h1>Тест</h1>
 
+   <h2> Choose the correct variant:</h2>
+   
   <div class="question">
-    <p>Яке це місто?</p>
-    <input type="radio" name="question1" value="Київ">Київ
-    <input type="radio" name="question1" value="Москва">Москва
+    <p>1. I ___(do) my homework every day.</p>
+    <input type="radio" name="question1" value="do">do
+    <input type="radio" name="question1" value="does">does
   </div>
 
   <div class="question">
-    <p>Яка це країна?</p>
-    <input type="radio" name="question2" value="Україна">Україна
-    <input type="radio" name="question2" value="Росія">Росія
+    <p>2. He ___(sleep) a lot.</p>
+    <input type="radio" name="question2" value="sleep">sleep
+    <input type="radio" name="question2" value="sleeps">sleeps
   </div>
 
-  <input type="submit" value="Відправити">
-</body>
-</html>
-<body>
-<h1 id="main">Галерея Сєроух Варвари Олексіївни</h1>
-<p><a id="back" href="index.html">Назад на головну</a></p>
-<h2 id="center">Мої зображення</h2>
-<h3 id="imginthisfold">Зображення у цій папці</h3>
-  <img src="img.gif"
-       alt="image in this dir">
-<h3 id="imginfold">Зображення у папці</h3>
-  <img src="images/img2.gif"
-       alt="image in dir">
-<h3 id="imgonline">Зображення онлайн</h3>
-  <img src="https://place-hold.it/1280x1024&fontsize=26"
-       alt="online image"
+    <div class="question">
+    <p>3. Bob ___(watch TV) every evening.</p>
+    <input type="radio" name="question3" value="watch TVs">watch TVs
+    <input type="radio" name="question3" value="watchs TV">watchs TV
+    <input type="radio" name="question3" value="watches TV">watches TV
+    <input type="radio" name="question3" value="watch TV">watch TV
+  </div>
+   
+    <div class="question">
+    <p>4. They ___( play) computer games at the weekend.</p>
+    <input type="radio" name="question4" value="plays">plays
+    <input type="radio" name="question4" value="play">play
+  </div>
+
+    <div class="question">
+    <p>5. Bill and Ben ___(get up) at 7 o'clock.</p>
+    <input type="radio" name="question5" value="gets up">gets up
+    <input type="radio" name="question5" value="get ups">get ups
+  </div>
+   
+    <div class="question">
+    <p>2. He ___(sleep) a lot.</p>
+    <input type="radio" name="question2" value="sleep">sleep
+    <input type="radio" name="question2" value="sleeps">sleeps
+  </div>
+
+    <div class="question">
+    <p>2. He ___(sleep) a lot.</p>
+    <input type="radio" name="question2" value="sleep">sleep
+    <input type="radio" name="question2" value="sleeps">sleeps
+  </div>
+
+    <div class="question">
+    <p>2. He ___(sleep) a lot.</p>
+    <input type="radio" name="question2" value="sleep">sleep
+    <input type="radio" name="question2" value="sleeps">sleeps
+  </div>
+
+    <div class="question">
+    <p>2. He ___(sleep) a lot.</p>
+    <input type="radio" name="question2" value="sleep">sleep
+    <input type="radio" name="question2" value="sleeps">sleeps
+  </div>
+
+    <div class="question">
+    <p>2. He ___(sleep) a lot.</p>
+    <input type="radio" name="question2" value="sleep">sleep
+    <input type="radio" name="question2" value="sleeps">sleeps
+  </div>
+
+    <div class="question">
+    <p>2. He ___(sleep) a lot.</p>
+    <input type="radio" name="question2" value="sleep">sleep
+    <input type="radio" name="question2" value="sleeps">sleeps
+  </div>
+
+    <div class="question">
+    <p>2. He ___(sleep) a lot.</p>
+    <input type="radio" name="question2" value="sleep">sleep
+    <input type="radio" name="question2" value="sleeps">sleeps
+  </div>
 </body>
 </html>
