--- a/English/test.html
+++ b/English/test.html
@@ -10,7 +10,65 @@
 <body>
   <h1>Тест</h1>
 
-   <h2> Choose the correct variant:</h2>
+   <nav>
+<p><a href="index.html">Назад на головну</a></p>
+</nav>
+
+<h3 id="to-the-content">Зміст</h3>
+
+   <ul>  
+  <li>
+    <a href="#Present-Simple">Present Simple</a>
+  </li>
+
+  <li>
+    <a href="#Present-Continuous">Present Continuous</a>
+  </li>
+
+  <li>
+    <a href="#Present-Perfect">Present Perfect</a>
+  </li>
+
+  <li>
+    <a href="#Present-Perfect-Continuous">Present Perfect Continuous</a>
+  </li>
+
+  <li>
+    <a href="#Past-Simple">Past Simple</a>
+  </li>
+
+  <li>
+    <a href="#Past-Continuous">Past Continuous</a>
+  </li>
+
+  <li>
+    <a href="#Past-Perfect">Past Perfect</a>
+  </li>
+
+   <li>
+    <a href="#Past-Perfect-Continuous">Past Perfect Continuous</a>
+  </li>
+
+   <li>
+    <a href="#Future-Simple">Future Simple</a>
+  </li>
+
+   <li>
+    <a href="#Future-Continuous">Future Continuous</a>
+  </li>
+
+   <li>
+    <a href="#Future-Perfect">Future Perfect</a>
+  </li>
+
+   <li>
+    <a href="#Future-Perfect-Continuous">Future Perfect Continuous</a>
+  </li>
+</ul>
+
+   <article>
+<h2 id="Present-Simple">Present Simple</h2>
+<h2> Choose the correct variant:</h2>
    
   <div class="question">
     <p>1. I ___(do) my homework every day.</p>
@@ -97,5 +155,9 @@
     <input type="radio" name="question12">not does her homework
     <input type="radio" name="question12">does her homework
   </div>
+</article>
+<a href="#to-the-content">До змісту</a>
+
+   
 </body>
 </html>
