--- a/English/test.html
+++ b/English/test.html
@@ -156,8 +156,10 @@
     <input type="radio" name="question12">does her homework
   </div>
 </article>
-<a href="#to-the-content">До змісту</a>
+<p><a href="#to-the-content">До змісту</a></p>
 
+   <hr>
+  <p><a id="up" href="#bio">Уверх</a></p>
    
 </body>
 </html>
