--- a/English/reading.html
+++ b/English/reading.html
@@ -5,7 +5,7 @@
 <title> Novadays </title>
 </head>
   <body>
-    <h1 id="main">Reading</h1>
+    <h1 id="bio">Reading</h1>
     
     <p><a id="back" href="index.html">Назад на головну</a></p>
 
