--- a/English/answer.html
+++ b/English/answer.html
@@ -1,1 +1,81 @@
+<!DOCTYPE html>
+<html lang="uk">
+  <head>
+   <meta charset="UTF-8">
+   <title> Pract </title>
+    <link rel="stylesheet" href="biography.css">
+  </head>
+  <body>
+    <h1 id="bio">Answer</h1>
 
+<nav>
+<p><a href="index.html">Назад на головну</a></p>
+</nav>
+
+<h3 id="to-the-content">Зміст</h3>
+<ul>
+  <li>
+    <a href="#Present-Simple">Present Simple</a>
+  </li>
+
+  <li>
+    <a href="#Present-Continuous">Present Continuous</a>
+  </li>
+
+  <li>
+    <a href="#Present-Perfect">Present Perfect</a>
+  </li>
+
+  <li>
+    <a href="#Present-Perfect-Continuous">Present Perfect Continuous</a>
+  </li>
+
+  <li>
+    <a href="#Past-Simple">Past Simple</a>
+  </li>
+
+  <li>
+    <a href="#Past-Continuous">Past Continuous</a>
+  </li>
+
+  <li>
+    <a href="#Past-Perfect">Past Perfect</a>
+  </li>
+
+   <li>
+    <a href="#Past-Perfect-Continuous">Past Perfect Continuous</a>
+  </li>
+
+   <li>
+    <a href="#Future-Simple">Future Simple</a>
+  </li>
+
+   <li>
+    <a href="#Future-Continuous">Future Continuous</a>
+  </li>
+
+   <li>
+    <a href="#Future-Perfect">Future Perfect</a>
+  </li>
+
+   <li>
+    <a href="#Future-Perfect-Continuous">Future Perfect Continuous</a>
+  </li>
+</ul>
+
+    <article>
+<h2 id="Present-Simple">Present Simple</h2>
+      <p>1.-A</p>
+      <p>2.-B</p>
+      <p>3.-C</p>
+      <p>4.-B</p>
+      <p>5.-D</p>
+      <p>6.-B</p>
+      <p>7.-C</p>
+      <p>8.-B</p>
+      <p>9.-D</p>
+      <p>10.-B</p>
+      <p>11.-C</p>
+      <p>12.-B</p>
+</article>
+<a href="#to-the-content">До змісту</a>
