--- a/English/test.html
+++ b/English/test.html
@@ -72,7 +72,7 @@
    
   <div class="question">
     <p>1. I ___(do) my homework every day.</p>
-    <input type="radio" name="question1" value="do">do
+    <input type="radio" name="question1" value="do">A. do
     <input type="radio" name="question1" value="does">does
   </div>
 
