--- a/English/test.html
+++ b/English/test.html
@@ -73,87 +73,87 @@
   <div class="question">
     <p>1. I ___(do) my homework every day.</p>
     <input type="radio" name="question1" value="do">A. do
-    <input type="radio" name="question1" value="does">does
+    <input type="radio" name="question1" value="does">B. does
   </div>
 
   <div class="question">
     <p>2. He ___(sleep) a lot.</p>
-    <input type="radio" name="question2" value="sleep">sleep
-    <input type="radio" name="question2" value="sleeps">sleeps
+    <input type="radio" name="question2" value="sleep">A. sleep
+    <input type="radio" name="question2" value="sleeps">B. sleeps
   </div>
 
   <div class="question">
     <p>3. Bob ___(watch TV) every evening.</p>
-    <input type="radio" name="question3" value="watch TVs">watch TVs
-    <input type="radio" name="question3" value="watchs TV">watchs TV
-    <input type="radio" name="question3" value="watches TV">watches TV
-    <input type="radio" name="question3" value="watch TV">watch TV
+    <input type="radio" name="question3" value="watch TVs">A. watch TVs
+    <input type="radio" name="question3" value="watchs TV">B. watchs TV
+    <input type="radio" name="question3" value="watches TV">C. watches TV
+    <input type="radio" name="question3" value="watch TV">D. watch TV
   </div>
    
   <div class="question">
     <p>4. They ___( play) computer games at the weekend.</p>
-    <input type="radio" name="question4" value="plays">plays
-    <input type="radio" name="question4" value="play">play
+    <input type="radio" name="question4" value="plays">A. plays
+    <input type="radio" name="question4" value="play">B. play
   </div>
 
   <div class="question">
     <p>5. Bill and Ben ___(get up) at 7 o'clock.</p>
-    <input type="radio" name="question5" value="gets up">gets up
-    <input type="radio" name="question5" value="get ups">get ups
-    <input type="radio" name="question5">gat up
-    <input type="radio" name="question5" value="rar">get up
+    <input type="radio" name="question5" value="gets up">A. gets up
+    <input type="radio" name="question5" value="get ups">B. get ups
+    <input type="radio" name="question5">C. gat up
+    <input type="radio" name="question5" value="rar">D. get up
   </div>
    
   <div class="question">
     <p>6. My cat ___(like) to play with his ball.</p>
-    <input type="radio" name="question6">like
-    <input type="radio" name="question6">likes
+    <input type="radio" name="question6">A. like
+    <input type="radio" name="question6">B. likes
   </div>
 
   <div class="question">
     <p>7. My brother ___(brush his teeth) every morning.</p>
-    <input type="radio" name="question7">brushs his teeth
-    <input type="radio" name="question7">brushes my teeth
-    <input type="radio" name="question7">brushes his teeth
-    <input type="radio" name="question7">brush his teeth
+    <input type="radio" name="question7">A. brushs his teeth
+    <input type="radio" name="question7">B. brushes my teeth
+    <input type="radio" name="question7">C. brushes his teeth
+    <input type="radio" name="question7">D. brush his teeth
   </div>
 
   <div class="question">
     <p>8. My mum ___(cook) dinner every day.</p>
-    <input type="radio" name="question8">cook
-    <input type="radio" name="question8">cooks 
+    <input type="radio" name="question8">A. cook
+    <input type="radio" name="question8">B. cooks 
   </div>
 
   <div class="question">
     <p>9. Nick ___(not play) computer games every day.</p>
-    <input type="radio" name="question9">not plays
-    <input type="radio" name="question9">don't play
-    <input type="radio" name="question9">doesn't plays
-    <input type="radio" name="question9">doesn't play
+    <input type="radio" name="question9">A. not plays
+    <input type="radio" name="question9">B. don't play
+    <input type="radio" name="question9">C. doesn't plays
+    <input type="radio" name="question9">D. doesn't play
   </div>
 
   <div class="question">
     <p>10. My brothers ___(not like) fish.</p>
-    <input type="radio" name="question10">not like
-    <input type="radio" name="question10">don't like
-    <input type="radio" name="question10">does't like
-    <input type="radio" name="question10">doesn't likes
+    <input type="radio" name="question10">A. not like
+    <input type="radio" name="question10">B. don't like
+    <input type="radio" name="question10">C. does't like
+    <input type="radio" name="question10">D. doesn't likes
   </div>
 
   <div class="question">
     <p>11. We ___(not go) to school at the weekend.</p>
-    <input type="radio" name="question11">doesn't go
-    <input type="radio" name="question11">don't goes
-    <input type="radio" name="question11">don't go 
-    <input type="radio" name="question11">not go
+    <input type="radio" name="question11">A. doesn't go
+    <input type="radio" name="question11">B. don't goes
+    <input type="radio" name="question11">C. don't go 
+    <input type="radio" name="question11">D. not go
   </div>
 
   <div class="question">
     <p>12. Sally ___(not do her homework) on Saturdays.</p>
-    <input type="radio" name="question12">don't do her homework
-    <input type="radio" name="question12">doesn't do her homework
-    <input type="radio" name="question12">not does her homework
-    <input type="radio" name="question12">does her homework
+    <input type="radio" name="question12">A. don't do her homework
+    <input type="radio" name="question12">B. doesn't do her homework
+    <input type="radio" name="question12">C. not does her homework
+    <input type="radio" name="question12">D. does her homework
   </div>
 </article>
 <p><a href="#to-the-content">До змісту</a></p>
