--- a/English/answer.html
+++ b/English/answer.html
@@ -79,3 +79,9 @@
       <p>12.-B</p>
 </article>
 <a href="#to-the-content">До змісту</a>
+
+     <hr>
+  <p><a id="up" href="#bio">Уверх</a></p>
+
+  </body>
+</html>
