--- a/English/words.html
+++ b/English/words.html
@@ -10,6 +10,32 @@
   <body>
     <h1 id="main">Друзі Сєроух Варвари Олексіївни</h1>
     <p><a id="back" href="index.html">Назад на головну</a></p>
+
+      <div class="block3">
+        <h3 class=“block-header”>Таблиця</h3>
+        <table>
+            <tr>
+                <th>Країна</th>
+                <th>Населення</th>
+            </tr>
+            <tr>
+                <td>Німеччина</td>
+                <td>83,02 млн. ос.</td>
+            </tr>
+            <tr>
+                <td>Чехія</td>
+                <td>10,69 млн. ос.</td>
+            </tr>
+            <tr>
+                <td>Франція</td>
+                <td>66,8 млн. ос.</td>
+            </tr>
+            <tr>
+                <td>Бельгія</td>
+                <td>11,46 млн. ос.</td>
+            </tr>
+        </table>
+    </div>
 <h2>Мої друзі</h2>
 <div>
   <table>
