--- a/English/words.html
+++ b/English/words.html
@@ -11,6 +11,30 @@
     <h1 id="main">Друзі Сєроух Варвари Олексіївни</h1>
     <p><a id="back" href="index.html">Назад на головну</a></p>
 
+      <table>
+  <thead>
+    <tr>
+      <th>Назва</th>
+      <th>Значення</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Київ</td>
+      <td>столиця України</td>
+    </tr>
+    <tr>
+      <td>Дніпро</td>
+      <td>друге за величиною місто України</td>
+    </tr>
+    <tr>
+      <td>Одеса</td>
+      <td>морське портове місто</td>
+    </tr>
+  </tbody>
+</table>
+
+
       <div class="block3">
         <h3 class=“block-header”>Таблиця</h3>
         <table>
