--- a/English/words.html
+++ b/English/words.html
@@ -34,6 +34,28 @@
   </tbody>
 </table>
 
+<table border="1">
+  <thead>
+    <tr>
+      <th>Назва</th>
+      <th>Значення</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Київ</td>
+      <td>столиця України</td>
+    </tr>
+    <tr>
+      <td>Дніпро</td>
+      <td>друге за величиною місто України</td>
+    </tr>
+    <tr>
+      <td>Одеса</td>
+      <td>морське портове місто</td>
+    </tr>
+  </tbody>
+</table>
 
       <div class="block3">
         <h3 class=“block-header”>Таблиця</h3>
