--- a/English/words.html
+++ b/English/words.html
@@ -8,28 +8,52 @@
 </head>
   <html>
   <body>
-    <h1 id="main">Друзі Сєроух Варвари Олексіївни</h1>
+    <h1 id="bio">Words</h1>
     <p><a id="back" href="index.html">Назад на головну</a></p>
 
       <table>
   <thead>
     <tr>
-      <th>Назва</th>
-      <th>Значення</th>
+      <th>Слово</th>
+      <th>Переклад</th>
+      <th>Вимова</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td>Київ</td>
-      <td>столиця України</td>
+      <td>hi</td>
+      <td>привіт</td>
+        <td>[хай]</td>
     </tr>
     <tr>
-      <td>Дніпро</td>
-      <td>друге за величиною місто України</td>
+      <td>child</td>
+      <td>дитина</td>
+      <td>[чайлд]</td>
     </tr>
     <tr>
-      <td>Одеса</td>
-      <td>морське портове місто</td>
+      <td>guy</td>
+      <td>хлопець</td>
+      <td>[гай]</td>
+    </tr>
+    <tr>
+      <td>neighbor</td>
+      <td>сусід</td>
+      <td>[нЕйбер]</td>
+    </tr>
+    <tr>
+      <td>guest</td>
+      <td>гість</td>
+      <td>[Гест]</td>
+    </tr>
+    <tr>
+      <td>chief</td>
+      <td>начальник</td>
+      <td>[чі: ф]</td>
+    </tr>
+    <tr>
+      <td>husband</td>
+      <td>чоловік</td>
+      <td>[хАзбенд]</td>
     </tr>
   </tbody>
 </table>
