--- a/English/words.html
+++ b/English/words.html
@@ -11,7 +11,7 @@
     <h1 id="bio">Words</h1>
     <p><a id="back" href="index.html">Назад на головну</a></p>
 
-      <table>
+ <table border="1">
   <thead>
     <tr>
       <th>Слово</th>
@@ -81,74 +81,5 @@
   </tbody>
 </table>
 
-      <div class="block3">
-        <h3 class=“block-header”>Таблиця</h3>
-        <table>
-            <tr>
-                <th>Країна</th>
-                <th>Населення</th>
-            </tr>
-            <tr>
-                <td>Німеччина</td>
-                <td>83,02 млн. ос.</td>
-            </tr>
-            <tr>
-                <td>Чехія</td>
-                <td>10,69 млн. ос.</td>
-            </tr>
-            <tr>
-                <td>Франція</td>
-                <td>66,8 млн. ос.</td>
-            </tr>
-            <tr>
-                <td>Бельгія</td>
-                <td>11,46 млн. ос.</td>
-            </tr>
-        </table>
-    </div>
-<h2>Мої друзі</h2>
-<div>
-  <table>
-    <tr>
-      <th>Прізвище</th>
-      <th>Ім’я</th>
-      <th>Дата народження</th>
-      <th>Адреса проживання</th>
-      <th>Контактний телефон</th>
-    </tr>  
-
-    <tr>
-      <td>Тополя</td>
-      <td>Єкатерина</td>
-      <td>11.09.2005</td>
-      <td>м. Харків</td>
-      <td>+380505247155</td>
-    </tr>
-
-    <tr>
-      <td>Максименко</td>
-      <td>Євген</td>
-      <td>10.03.2006</td>
-      <td>м. Дніпро</td>
-      <td>+380666743890</td>
-    </tr>
-
-    <tr>
-      <td>Хоменко</td>
-      <td>Ярина</td>
-      <td>19.11.2002</td>
-      <td>м. Болехів</td>
-      <td>+380666865945</td>
-    </tr>
-
-    <tr>
-      <td>Дягілєва</td>
-      <td>Анна</td>
-      <td>30.06.2005</td>
-      <td>м. Харків</td>
-      <td>+380507216579</td>
-    </tr>
-  </table>
-</div>
   </body>
 </html>
