--- a/English/words.html
+++ b/English/words.html
@@ -11,6 +11,68 @@
     <h1 id="bio">Words</h1>
     <p><a id="back" href="index.html">Назад на головну</a></p>
 
+<table border="1">
+<thead>
+    <tr>
+      <th>Слово</th>
+      <th>Переклад</th>
+      <th>Вимова</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>hi</td>
+      <td>привіт</td>
+        <td>[хай]</td>
+    </tr>
+    <tr>
+      <td>child</td>
+      <td>дитина</td>
+      <td>[чайлд]</td>
+    </tr>
+    <tr>
+      <td>guy</td>
+      <td>хлопець</td>
+      <td>[гай]</td>
+    </tr>
+    <tr>
+      <td>neighbor</td>
+      <td>сусід</td>
+      <td>[нЕйбер]</td>
+    </tr>
+    <tr>
+      <td>guest</td>
+      <td>гість</td>
+      <td>[Гест]</td>
+    </tr>
+    <tr>
+      <td>chief</td>
+      <td>начальник</td>
+      <td>[чі: ф]</td>
+    </tr>
+    <tr>
+      <td>husband</td>
+      <td>чоловік</td>
+      <td>[хАзбенд]</td>
+    </tr>
+    <tr>
+      <td>wife</td>
+      <td>дружина</td>
+      <td>[уАйф]</td>
+    </tr>
+      <tr>
+      <td>son</td>
+      <td>син</td>
+      <td>[сан]</td>
+    </tr>
+      <tr>
+      <td>daughter</td>
+      <td>дочка</td>
+      <td>[дО: тер]</td>
+    </tr>
+  </tbody>
+</table>
+    
  <table border="1">
   <thead>
     <tr>
@@ -55,28 +117,20 @@
       <td>чоловік</td>
       <td>[хАзбенд]</td>
     </tr>
-  </tbody>
-</table>
-
-<table border="1">
-  <thead>
     <tr>
-      <th>Назва</th>
-      <th>Значення</th>
+      <td>wife</td>
+      <td>дружина</td>
+      <td>[уАйф]</td>
     </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Київ</td>
-      <td>столиця України</td>
+      <tr>
+      <td>son</td>
+      <td>син</td>
+      <td>[сан]</td>
     </tr>
-    <tr>
-      <td>Дніпро</td>
-      <td>друге за величиною місто України</td>
-    </tr>
-    <tr>
-      <td>Одеса</td>
-      <td>морське портове місто</td>
+      <tr>
+      <td>daughter</td>
+      <td>дочка</td>
+      <td>[дО: тер]</td>
     </tr>
   </tbody>
 </table>
