--- a/English/test.html
+++ b/English/test.html
@@ -8,7 +8,7 @@
 <title> Gallery </title>
 </head>
 <body>
-  <h1 id="bio">Тест</h1>
+  <h1 id="bio">Test</h1>
 
    <nav>
 <p><a href="index.html">Назад на головну</a></p>
