--- a/English/words.html
+++ b/English/words.html
@@ -16,59 +16,36 @@
     <tr>
       <th>Слово</th>
       <th>Переклад</th>
-      <th>Вимова</th>
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>hi</td>
-      <td>привіт</td>
-        <td>[хай]</td>
-    </tr>
-    <tr>
-      <td>child</td>
-      <td>дитина</td>
-      <td>[чайлд]</td>
-    </tr>
-    <tr>
-      <td>guy</td>
-      <td>хлопець</td>
-      <td>[гай]</td>
-    </tr>
-    <tr>
-      <td>neighbor</td>
-      <td>сусід</td>
-      <td>[нЕйбер]</td>
-    </tr>
-    <tr>
-      <td>guest</td>
-      <td>гість</td>
-      <td>[Гест]</td>
-    </tr>
-    <tr>
-      <td>chief</td>
-      <td>начальник</td>
-      <td>[чі: ф]</td>
-    </tr>
-    <tr>
-      <td>husband</td>
-      <td>чоловік</td>
-      <td>[хАзбенд]</td>
-    </tr>
-    <tr>
-      <td>wife</td>
-      <td>дружина</td>
-      <td>[уАйф]</td>
+   <tr>
+      <td>What?</td>
+      <td>Що?</td>
     </tr>
       <tr>
-      <td>son</td>
-      <td>син</td>
-      <td>[сан]</td>
+      <td>When?</td>
+      <td>Коли?</td>
     </tr>
       <tr>
-      <td>daughter</td>
-      <td>дочка</td>
-      <td>[дО: тер]</td>
+      <td>Where?</td>
+      <td>Де?</td>
+    </tr>
+      <tr>
+      <td>Why?</td>
+      <td>Чому?</td>
+    </tr>
+      <tr>
+      <td>Which?</td>
+      <td>Який?</td>
+    </tr>
+      <tr>
+      <td>Whose?</td>
+      <td>Чий?</td>
+    </tr>
+      <tr>
+      <td>Whom?</td>
+      <td>Кого?</td>
     </tr>
   </tbody>
 </table>
