--- a/English/test.html
+++ b/English/test.html
@@ -158,6 +158,107 @@
 </article>
 <p><a href="#to-the-content">До змісту</a></p>
 
+   <article>
+<h2 id="Present-Continuous">Present Continuous</h2>
+<h2> Choose the correct variant:</h2>
+<div class="question">
+    <p>1. I ___ a letter at the moment.</p>
+    <input type="radio" name="question1">A. is writing
+    <input type="radio" name="question1">B. am writing 
+    <input type="radio" name="question1">C. are writing
+    <input type="radio" name="question1">D. write
+  </div>
+
+     <div class="question">
+    <p>2. She ___ a book now.</p>
+    <input type="radio" name="question2">A. is reading
+    <input type="radio" name="question2">B. am reading
+    <input type="radio" name="question2">C. are reading
+    <input type="radio" name="question2">D. reads
+  </div> 
+
+       <div class="question">
+    <p>3. They ___ TV in the room at present.</p>
+    <input type="radio" name="question3">A. is watching
+    <input type="radio" name="question3">B. am watching
+    <input type="radio" name="question3">C. are watching
+    <input type="radio" name="question3">D. watch
+  </div> 
+
+       <div class="question">
+    <p>4. I ___ a kite now.</p>
+    <input type="radio" name="question4">A. amn't flying
+    <input type="radio" name="question4">B. 'm not flying
+    <input type="radio" name="question4">C. do not flying
+    <input type="radio" name="question4">D. isn't flying
+  </div> 
+
+       <div class="question">
+    <p>5. Vicky isn't ___ in the river at the moment.</p>
+    <input type="radio" name="question5">A. swim
+    <input type="radio" name="question5">B. swimming
+    <input type="radio" name="question5">C. swiming
+    <input type="radio" name="question5">D. swam
+  </div> 
+
+       <div class="question">
+    <p>6. The children ___ in the park.</p>
+    <input type="radio" name="question6">A. is playing
+    <input type="radio" name="question6">B. are playing
+    <input type="radio" name="question6">C. are plaing
+    <input type="radio" name="question6">D. am playing
+  </div> 
+
+    <div class="question">
+    <p>7. ___ Frank and Mary ___ dinner?</p>
+    <input type="radio" name="question7">A. Is, cooking
+    <input type="radio" name="question7">B. Is, cook
+    <input type="radio" name="question7">C. Are, cook
+    <input type="radio" name="question7">D. Are, cooking 
+  </div> 
+
+       <div class="question">
+    <p>8. We are ___ New Year at the moment.</p>
+    <input type="radio" name="question8">A. celebrateing
+    <input type="radio" name="question8">B. celebrating 
+    <input type="radio" name="question8">C. celebrate
+    <input type="radio" name="question8">D. celebrat
+  </div> 
+
+       <div class="question">
+    <p>9. Is Patty tidying her room now?Yes, ___</p>
+    <input type="radio" name="question9">A. she is
+    <input type="radio" name="question9">B. is she
+    <input type="radio" name="question9">C. I am
+    <input type="radio" name="question9">D. she isn't
+  </div> 
+
+       <div class="question">
+    <p>10. We ___ a barbecue on Sunday.</p>
+    <input type="radio" name="question10">A. is having
+    <input type="radio" name="question10">B. are haveing
+    <input type="radio" name="question10">C. are having 
+    <input type="radio" name="question10">D. is haveing
+  </div> 
+
+       <div class="question">
+    <p>11. ___ the five family members ___ lunch?No, ___.</p>
+    <input type="radio" name="question11">A. Are, haveing\ they aren't
+    <input type="radio" name="question11">B. Are, having\ they aren't 
+    <input type="radio" name="question11">C. Is, having\ they aren't
+    <input type="radio" name="question11">D. Are, having\ they are
+  </div> 
+
+       <div class="question">
+    <p>12. ___ they ___ their meals?Yes, ___.</p>
+    <input type="radio" name="question12">A. Is, enjoying\ they are
+    <input type="radio" name="question12">B. Are, enjoing\ they are 
+    <input type="radio" name="question12">C. Are, enjoying\ they aren't
+    <input type="radio" name="question12">D. Are, enjoying\ they are
+  </div> 
+</article>
+<a href="#to-the-content">До змісту</a>
+
    <hr>
   <p><a id="up" href="#bio">Уверх</a></p>
    
