--- a/English/test.html
+++ b/English/test.html
@@ -257,7 +257,7 @@
     <input type="radio" name="question12">D. Are, enjoying\ they are
   </div> 
 </article>
-<a href="#to-the-content">До змісту</a>
+<p><a href="#to-the-content">До змісту</a></p>
 
    <hr>
   <p><a id="up" href="#bio">Уверх</a></p>
