--- a/English/answer.html
+++ b/English/answer.html
@@ -80,6 +80,23 @@
 </article>
 <a href="#to-the-content">До змісту</a>
 
+     <article>
+<h2 id="Present-Continuous">Present Continuous</h2>
+      <p>1.-B</p>
+      <p>2.-A</p>
+      <p>3.-C</p>
+      <p>4.-B</p>
+      <p>5.-B</p>
+      <p>6.-B</p>
+      <p>7.-D</p>
+      <p>8.-B</p>
+      <p>9.-A</p>
+      <p>10.-C</p>
+      <p>11.-B</p>
+      <p>12.-D</p>
+</article>
+<a href="#to-the-content">До змісту</a>
+
      <hr>
   <p><a id="up" href="#bio">Уверх</a></p>
 
