--- a/English/index.html
+++ b/English/index.html
@@ -36,5 +36,6 @@
   <p>Reading - практикує читання.</p>
   <p>Words - тут можна вивчити і записати нові слова.</p>
   <p>Test - після тем з граматики Ви будете проходити тест, щоб засвоїти матеріал.</p>
+  <p>Answer - тут можна подивитись відповіді на тестові завдання</p>
 </body>
 </html>
