--- a/English/grammar.html
+++ b/English/grammar.html
@@ -89,6 +89,49 @@
 <h2 id="Present-Simple">Present Simple</h2>
 <p>Present Simple використовують для виразу звичайної, регулярно повторюваної дії.</p>
 <img src="PrSi1.png" alt="Зображення">
+    <p>Слова, по яким можна впізнати Present Simple:</p>
+    <table border="1">
+<thead>
+    <tr>
+      <th>Слово</th>
+      <th>Переклад</th>
+    </tr>
+  </thead>
+  <tbody>
+   <tr>
+      <td>always</td>
+      <td>завжди</td>
+    </tr>
+     <tr>
+      <td>often</td>
+      <td>часто</td>
+    </tr>
+     <tr>
+      <td>usually</td>
+      <td>зазвичай</td>
+    </tr>
+     <tr>
+      <td>regularly</td>
+      <td>постійно</td>
+    </tr>
+     <tr>
+      <td>sometimes</td>
+      <td>інколи</td>
+    </tr>
+     <tr>
+      <td>seldom</td>
+      <td>зрідка</td>
+    </tr>
+     <tr>
+      <td>rarely</td>
+      <td>рідко</td>
+    </tr>
+     <tr>
+      <td>never</td>
+      <td>ніколи</td>
+    </tr>
+  </tbody>
+</table>
 </article>
 <a href="#to-the-content">До змісту</a>
     
