--- a/English/grammar.html
+++ b/English/grammar.html
@@ -139,6 +139,44 @@
 <h2 id="Present-Continuous">Present Continuous</h2>
 <p>Present Continuous використовують для виразу дії, яка відбувається на даний момент.</p>
     <img src="PrCo.png" alt="Зображення">
+    <table border="1">
+<thead>
+    <tr>
+      <th>Слово</th>
+      <th>Переклад</th>
+    </tr>
+  </thead>
+  <tbody>
+   <tr>
+      <td>now</td>
+      <td>зараз</td>
+    </tr>
+     <tr>
+      <td>still</td>
+      <td>все ще</td>
+    </tr>
+     <tr>
+      <td>currently</td>
+      <td>в цей час</td>
+    </tr>
+     <tr>
+      <td>at the moment</td>
+      <td>в цей момент</td>
+    </tr>
+     <tr>
+      <td>this morning</td>
+      <td>цього ранку</td>
+    </tr>
+     <tr>
+      <td>today</td>
+      <td>удень</td>
+    </tr>
+     <tr>
+      <td>tonight</td>
+      <td>ввечері</td>
+    </tr>
+  </tbody>
+</table>
   </article>
 <a href="#to-the-content">До змісту</a>
 
