--- a/English/grammar.html
+++ b/English/grammar.html
@@ -181,9 +181,39 @@
 <a href="#to-the-content">До змісту</a>
 
   <article>
-<h2 id="Present-Perfect">Present Perfect</h2>
+<h2 id="Present-Perfect"></h2>
 <p>Present Perfect використовують для виразу дії, яка відбулася (або яка відбувається), результат якої зв’язаний з теперішнім.</p>
     <img src="PrPe.png" alt="Зображення">
+    <table border="1">
+<thead>
+    <tr>
+      <th>Слово</th>
+      <th>Переклад</th>
+    </tr>
+  </thead>
+  <tbody>
+   <tr>
+      <td>ever</td>
+      <td>коли-небудь</td>
+    </tr>
+     <tr>
+      <td>never</td>
+      <td>ніколи</td>
+    </tr>
+     <tr>
+      <td>already</td>
+      <td>вже</td>
+    </tr>
+     <tr>
+      <td>yet</td>
+      <td>вже</td>
+    </tr>
+     <tr>
+      <td>so far</td>
+      <td>до сих пір</td>
+    </tr>
+  </tbody>
+</table>
   </article>
 <a href="#to-the-content">До змісту</a>
 
@@ -191,6 +221,40 @@
 <h2 id="Present-Perfect-Continuous">Present Perfect Continuous</h2>
 <p>Present Perfect Continuous використовують для виразу дії, яка розпочалася в минулому і продовжується у теперішньому часі, або ж важлива тривалість дії.</p>
     <img src="PrPeCo.png" alt="Зображення">
+    <table border="1">
+<thead>
+    <tr>
+      <th>Слово</th>
+      <th>Переклад</th>
+    </tr>
+  </thead>
+  <tbody>
+ <tr>
+      <td>since 10 o’clock</td>
+      <td>з десятої години</td>
+    </tr>
+     <tr>
+      <td>since last month</td>
+      <td>з минулого місяця</td>
+    </tr>
+     <tr>
+      <td>all day</td>
+      <td>весь день</td>
+    </tr>
+     <tr>
+      <td>for 2 hours</td>
+      <td>протягом двох годин</td>
+    </tr>
+     <tr>
+      <td>lately</td>
+      <td>останнім часом</td>
+    </tr>
+     <tr>
+      <td>recently</td>
+      <td>нещодавно</td>
+    </tr>
+  </tbody>
+</table>
   </article>
 <a href="#to-the-content">До змісту</a>
 
@@ -198,6 +262,7 @@
 <h2 id="Past-Simple">Past Simple</h2>
 <p>Past Simple використовують для виразу дії, яка відбулася у минулому.</p>
     <img src="PaSi1.png" alt="Зображення">
+    
   </article>
 <a href="#to-the-content">До змісту</a>
 
