--- a/English/grammar.html
+++ b/English/grammar.html
@@ -139,6 +139,7 @@
 <h2 id="Present-Continuous">Present Continuous</h2>
 <p>Present Continuous використовують для виразу дії, яка відбувається на даний момент.</p>
     <img src="PrCo.png" alt="Зображення">
+    <p>Слова, по яким можна впізнати Present Continuous:</p>
     <table border="1">
 <thead>
     <tr>
@@ -181,9 +182,10 @@
 <a href="#to-the-content">До змісту</a>
 
   <article>
-<h2 id="Present-Perfect"></h2>
+<h2 id="Present-Perfect">Present Perfect</h2>
 <p>Present Perfect використовують для виразу дії, яка відбулася (або яка відбувається), результат якої зв’язаний з теперішнім.</p>
     <img src="PrPe.png" alt="Зображення">
+    <p>Слова, по яким можна впізнати Present Perfect:</p>
     <table border="1">
 <thead>
     <tr>
@@ -221,6 +223,7 @@
 <h2 id="Present-Perfect-Continuous">Present Perfect Continuous</h2>
 <p>Present Perfect Continuous використовують для виразу дії, яка розпочалася в минулому і продовжується у теперішньому часі, або ж важлива тривалість дії.</p>
     <img src="PrPeCo.png" alt="Зображення">
+    <p>Слова, по яким можна впізнати Present Perfect Continuous:</p>
     <table border="1">
 <thead>
     <tr>
